@@ -554,7 +554,25 @@ see its function help for a description of the format."
 
  (tramp-set-completion-function
   tramp-kubernetes-method
-  `((tramp-kubernetes--completion-function ,tramp-kubernetes-method))))
+  `((tramp-kubernetes--completion-function ,tramp-kubernetes-method)))
+
+ (defconst tramp-kubernetes-connection-local-default-variables
+   '((tramp-config-check . tramp-kubernetes--current-context-data)
+     ;; This variable will be eval'ed in `tramp-expand-args'.
+     (tramp-extra-expand-args
+      . (?a (tramp-kubernetes--container (car tramp-current-connection))
+	    ?h (tramp-kubernetes--pod (car tramp-current-connection))
+	    ?x (tramp-kubernetes--context-namespace
+		(car tramp-current-connection)))))
+   "Default connection-local variables for remote kubernetes connections.")
+
+ (connection-local-set-profile-variables
+  'tramp-kubernetes-connection-local-default-profile
+  tramp-kubernetes-connection-local-default-variables)
+
+ (connection-local-set-profiles
+  `(:application tramp :protocol ,tramp-kubernetes-method)
+  'tramp-kubernetes-connection-local-default-profile))
 
 ;;;###tramp-autoload
 (defun tramp-enable-toolbox-method ()
@@ -595,7 +613,19 @@ see its function help for a description of the format."
 
   (tramp-set-completion-function
    tramp-flatpak-method
-   `((tramp-flatpak--completion-function ,tramp-flatpak-method))))
+   `((tramp-flatpak--completion-function ,tramp-flatpak-method)))
+
+  (defconst tramp-flatpak-connection-local-default-variables
+    `((tramp-remote-path  . ,(cons "/app/bin" tramp-remote-path)))
+    "Default connection-local variables for remote flatpak connections.")
+
+  (connection-local-set-profile-variables
+   'tramp-flatpak-connection-local-default-profile
+   tramp-flatpak-connection-local-default-variables)
+
+  (connection-local-set-profiles
+   `(:application tramp :protocol ,tramp-flatpak-method)
+   'tramp-flatpak-connection-local-default-profile))
 
 ;;;###tramp-autoload
 (defun tramp-enable-apptainer-method ()
@@ -637,38 +667,6 @@ see its function help for a description of the format."
   (tramp-set-completion-function
    tramp-nspawn-method
    `((tramp-nspawn--completion-function ,tramp-nspawn-method))))
-
-;; Default connection-local variables for Tramp.
-
-(defconst tramp-kubernetes-connection-local-default-variables
-  '((tramp-config-check . tramp-kubernetes--current-context-data)
-    ;; This variable will be eval'ed in `tramp-expand-args'.
-    (tramp-extra-expand-args
-     . (?a (tramp-kubernetes--container (car tramp-current-connection))
-	?h (tramp-kubernetes--pod (car tramp-current-connection))
-	?x (tramp-kubernetes--context-namespace
-	    (car tramp-current-connection)))))
-  "Default connection-local variables for remote kubernetes connections.")
-
-(connection-local-set-profile-variables
- 'tramp-kubernetes-connection-local-default-profile
- tramp-kubernetes-connection-local-default-variables)
-
-(connection-local-set-profiles
- `(:application tramp :protocol ,tramp-kubernetes-method)
- 'tramp-kubernetes-connection-local-default-profile)
-
-(defconst tramp-flatpak-connection-local-default-variables
-  `((tramp-remote-path  . ,(cons "/app/bin" tramp-remote-path)))
-  "Default connection-local variables for remote flatpak connections.")
-
-(connection-local-set-profile-variables
- 'tramp-flatpak-connection-local-default-profile
- tramp-flatpak-connection-local-default-variables)
-
-(connection-local-set-profiles
- `(:application tramp :protocol ,tramp-flatpak-method)
- 'tramp-flatpak-connection-local-default-profile)
 
 (add-hook 'tramp-unload-hook
 	  (lambda ()
