@@ -1,3 +1,12 @@
+2024-05-21  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-container.el: Move connection-local settings where they
+	belong to.
+
+	* tramp-sshfs.el (tramp-connection-properties): Do not set
+	connection property "direct-async-process".
+	(tramp-direct-async-process): Set connection-local value.
+
 2024-05-20  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp-sh.el (tramp-find-shell, tramp-find-inline-compress)
